--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
+autopep8==1.4.4
 certifi==2019.11.28
 chardet==3.0.4
+Django==2.1.3
+entrypoints==0.3
+flake8==3.7.9
+future==0.18.2
 idna==2.8
+iso8601==0.1.12
+mccabe==0.6.1
 pika==1.1.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
+PyJWT==1.7.1
+pyserial==3.4
+pytube==9.3.5
+pytz==2018.7
+PyYAML==5.2
 requests==2.22.0
+six==1.13.0
+twilio==6.35.1
 urllib3==1.25.7
+virtualenv==16.7.8
